Adjust styling (particular font sizes), add 'technology' title to segment page. Outstanding issues: font-sizes and general styles on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,9 @@
     box-sizing: border-box;
     margin: 0;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 body {
     background-color: #121212;
     font-family: 'Space Mono', monospace;
@@ -35,6 +37,7 @@ nav {
     padding: 1rem 2rem;
     color: var(--dark-gold);
     background-color: #0D0D0D;
+    font-size: 1.5rem;
 }
 
 ul {
@@ -47,7 +50,7 @@ ul {
 ul a {
     text-decoration: none;
     color: var(--dark-gold);
-    font-size: large;
+    font-size: 1.5rem;
 }
 
 .burger-menu {
@@ -88,7 +91,7 @@ ul a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0rem 5rem 8rem;
+    margin: 0rem 5rem;
     height: 100dvh;
 }
 
@@ -125,6 +128,10 @@ ul a {
     margin-bottom: 3rem;
 }
 
+/* Title */
+.technology-title {
+    margin: 5rem 0rem;
+}
 /* Cards */
 
 .perspective {
